Fix SonarQube issues: security, reliability and maintainability improvements