@@ -1,7 +1,6 @@
 package njt.mavenproject2.servis;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import njt.mavenproject2.dto.impl.KnjigaAutorDto;
 import njt.mavenproject2.entity.impl.Autor;
 import njt.mavenproject2.entity.impl.Knjiga;
@@ -72,7 +71,7 @@ public class KnjigaAutorServis {
         return repo.findByKnjigaId(knjigaId)
                 .stream()
                 .map(mapper::toDo)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
